examples/test/testpolicy16495.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16495
  namespace: namespace320
spec:
  podSelector:
    matchLabels:
      key14: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value36
          key38: value20
      podSelector:
        matchLabels:
          key4: value36
          key40: value15
          key39: value9
